tests/paczka1/fuzzy1/76429630.err
Error in line 2: qonGyBEHU A300 48,99
Error in line 6: t7Qqla A300 96,8
Error in line 22: t7Qqla A897 70,2
Error in line 20: qonGyBEHU A300 25,8
Error in line 36: IYXlMfAt A897 90,1
